Closes #26 - fixed overflow x scrolling issues

--- a/client/layout.scss
+++ b/client/layout.scss
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Ubuntu:wght@300;400;500;700&display=swap");
 
+html {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+}
+
 body {
     width: 100%;
     height: 100%;
